Started with a simple homepage

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <title>Martials.no</title>
+        <meta name="theme-color" content="#181a1b" />
+        <title>Hjem | Martials.no</title>
+        <link rel="icon" type="image/x-icon" href="resources/code.svg">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
