--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#181a1b" />
         <title>Hjem | Martials.no</title>
+        <meta name="description" content="Hjemmeside for API og diverse">
         <link rel="icon" type="image/x-icon" href="resources/code.svg">
     </head>
     <body>
