Update build to output generated at

--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
         <meta name="theme-color" content="#181a1b" />
         <title>Siden ble ikke funnet | Martials.no</title>
         <meta name="description" content="Hjemmeside for API og diverse">
-        <link rel="icon" type="image/x-icon" href="/assets/code.e5ef48f4.svg">
+        <link rel="icon" type="image/x-icon" href="/assets/code-e5ef48f4.svg">
         
-      <script type="module" crossorigin src="/assets/404.2864861b.js"></script>
-      <link rel="modulepreload" crossorigin href="/assets/layout.bb853e75.js">
-      <link rel="stylesheet" href="/assets/layout.9c9bf0bf.css">
+      <script type="module" crossorigin src="/assets/404-3d8b5595.js"></script>
+      <link rel="modulepreload" crossorigin href="/assets/layout-30df32e9.js">
+      <link rel="stylesheet" href="/assets/layout-52bf23e0.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
