--- a/simplify-truths.html
+++ b/simplify-truths.html
@@ -6,11 +6,11 @@
         <meta name="theme-color" content="#181a1b" />
         <title>Simplify | Martials.no</title>
         <meta name="description" content="Simplify truth values and generate truth tables">
-        <link rel="icon" type="image/x-icon" href="/assets/code.e5ef48f4.svg">
+        <link rel="icon" type="image/x-icon" href="/assets/code-e5ef48f4.svg">
         
-      <script type="module" crossorigin src="/assets/simplifyTruths.60860bcf.js"></script>
-      <link rel="modulepreload" crossorigin href="/assets/layout.bb853e75.js">
-      <link rel="stylesheet" href="/assets/layout.9c9bf0bf.css">
+      <script type="module" crossorigin src="/assets/simplifyTruths-a6a9ae89.js"></script>
+      <link rel="modulepreload" crossorigin href="/assets/layout-30df32e9.js">
+      <link rel="stylesheet" href="/assets/layout-52bf23e0.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
