--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="theme-color" content="#181a1b" />
         <title>Hjem | Martials.no</title>
         <meta name="description" content="Hjemmeside for API og diverse">
-        <link rel="icon" type="image/x-icon" href="/assets/code.e5ef48f4.svg">
-      <script type="module" crossorigin src="/assets/main.e7627ed4.js"></script>
-      <link rel="modulepreload" crossorigin href="/assets/layout.bb853e75.js">
-      <link rel="stylesheet" href="/assets/layout.9c9bf0bf.css">
+        <link rel="icon" type="image/x-icon" href="/assets/code-e5ef48f4.svg">
+      <script type="module" crossorigin src="/assets/main-08550a08.js"></script>
+      <link rel="modulepreload" crossorigin href="/assets/layout-30df32e9.js">
+      <link rel="stylesheet" href="/assets/layout-52bf23e0.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
