--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="nb">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#181a1b" />
-        <title>Hjem | Martials.no</title>
-        <meta name="description" content="Hjemmeside for API og diverse">
-        <link rel="icon" type="image/x-icon" href="resources/code.svg">
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#181a1b" />
+    <title>Hjem | Martials.no</title>
+    <meta name="description" content="Hjemmeside for API og diverse" />
+    <link rel="icon" type="image/x-icon" href="resources/code.svg" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-        <script src="/src/app.tsx" type="module"></script>
-    </body>
+    <script src="/src/app.tsx" type="module"></script>
+  </body>
 </html>
