--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Hjem | Martials.no</title>
     <meta name="description" content="Hjemmeside for API og diverse" />
     <link rel="icon" type="image/x-icon" href="resources/code.svg" />
+    <!-- 100% privacy-first analytics -->
+    <script data-collect-dnt="true" async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      You need to enable JavaScript to run this app.
+      <img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" />
+    </noscript>
     <div id="root"></div>
 
     <script src="/src/app.tsx" type="module"></script>
