Update build to output generated at

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Hjem | Martials.no</title>
     <meta name="description" content="Hjemmeside for API og diverse" />
     <link rel="icon" type="image/x-icon" href="/assets/code-nzJlNpcV.svg" />
+    <!-- 100% privacy-first analytics -->
+    <script data-collect-dnt="true" async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
     <script type="module" crossorigin src="/assets/main-7gPkv783.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-CQ3K2vor.css">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      You need to enable JavaScript to run this app.
+      <img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" />
+    </noscript>
     <div id="root"></div>
 
   </body>
